--- a/contato.html
+++ b/contato.html
@@ -39,7 +39,7 @@
                <option>Outros</option>
             </select>
          </div>
-         <div>
+         <div class="m">
             <label for="msg">Mensagem:</label>
             <textarea name="msg" id="msg" cols="20" rows="10"></textarea>
          </div>
