--- a/index.html
+++ b/index.html
@@ -24,36 +24,36 @@
    <h2 style="color:blue"> Destaques </h2>
    <ul>
       <li>
-         <img src="https://placehold.co/150x230" width="150" height="230" alt="">
-         <a href="#"><strong>Titulo do Livro</strong></a>
+         <img src="images/abiblioteca.jpg" alt="A Biblioteca da meia-noite">
+         <a href="#"><strong>A Biblioteca da meia-noite</strong></a>
       </li>
       <li>
-         <img src="http://placehold.co/150x230" width="150" height="230" alt="">
-         <a href="#"><strong>Titulo do Livro</strong></a>
+         <img src="images/afilha.jpg" alt="A Filha das Profundezas">
+         <a href="#"><strong>A Filha das Profundezas</strong></a>
       </li>
       <li>
-         <img src="http://placehold.co/150x230" width="150" height="230" alt="">
-         <a href="#"><strong>Titulo do Livro</strong></a>
+         <img src="images/apiramide.jpg" alt="A Pirâmide Vermelha">
+         <a href="#"><strong>A Pirâmide Vermelha</strong></a>
       </li>
       <li>
-         <img src="http://placehold.co/150x230" width="150" height="230" alt="">
-         <a href="#"><strong>Titulo do Livro</strong></a>
+         <img src="images/asvantagens.jpg" alt="As Vantagens de Ser Invísivel">
+         <a href="#"><strong>As Vantagens de Ser Invísivel</strong></a>
       </li>
       <li>
-         <img src="http://placehold.co/150x230" width="150" height="230" alt="">
-         <a href="#"><strong>Titulo do Livro</strong></a>
+         <img src="images/avida.jpg" alt="A Vida Invísivel de Addie Laure">
+         <a href="#"><strong>A Vida Invísivel de Addie Laure</strong></a>
       </li>
       <li>
-         <img src="http://placehold.co/150x230" width="150" height="230" alt="">
-         <a href="#"><strong>Titulo do Livro</strong></a>
+         <img src="images/cinderela.jpg" alt="Cinderela está morta">
+         <a href="#"><strong>Cinderela está morta</strong></a>
       </li>
       <li>
-         <img src="http://placehold.co/150x230" width="150" height="230" alt="">
-         <a href="#"><strong>Titulo do Livro</strong></a>
+         <img src="images/inventei.jpg" alt="Inventei Você?">
+         <a href="#"><strong>Inventei Você?</strong></a>
       </li>
       <li>
-         <img src="http://placehold.co/150x230" width="150" height="230" alt="">
-         <a href="#"><strong>Titulo do Livro</strong></a>
+         <img src="images/odiario.jpg" alt="O Diário de Anne Frank">
+         <a href="#"><strong>O Diário de Anne Frank</strong></a>
       </li>
    </ul>
 </section>
